Fixed topic selection on smaller windows

--- a/web/static/css/app.sass
+++ b/web/static/css/app.sass
@@ -35,6 +35,8 @@ body
   @extend .dropshadow
   vertical-align: middle
   text-align: right
+  .logo-section
+    line-height: 6
   .topic-select-section
     text-align: left
     .viewers-section
@@ -46,7 +48,9 @@ body
     .topic-select-box
       margin-left: 20px
       .dropdown-menu > li > a
-        padding: 5px
+        padding: 5px 0 5px 5px
+        .pull-left
+          margin-right: 2px
       .unread-messages-section
         list-style: none
         padding: 0
